CB-012 add slider in project

--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,7 @@
     <div id="user_case" class="segment">
         <div class="container slider">
             <div id="slide_in_view" class="slide_in_view">
-                <div class="slider_list">
+                <div id="slider_list" class="slider_list">
                     <div class="slide">
                         <div class="slide_visual_wrap flex_width_40">
                             <div class="slide_visual background_pink_grad">
@@ -212,9 +212,8 @@
             </div>
             <div class="slider_dots">
                 <div id="slide_number" class="slide_number">01</div>
-                <div class="slide_dots">
-                    <div class="slide_dot active"></div>
-                </div>
+                <div id="slide_dots" class="slide_dots">
+                    </div>
                 <div id="slide_count" class="slide_count">01</div>
             </div>
         </div>
